src/test/deca/context/invalid/created/object/equals_A_float.deca
// Description :
//    test equals entre un A et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11:  (3.71) Le membre gauche n'est pas de type 'class'
class A{}
{
A a;
float b;
int c = a.equals(b);
}
